# helipad

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config_spec.toml  helipad.conf  home.html  home.js  testbuildrun.sh
.github/workflows/: ci.yml  docker-image.yml  ghcr-build.yml
cln-rs/: Cargo.toml  README.md  build.rs
cln-rs/src/: cln.rs  lib.rs
dbif/: Cargo.toml
dbif/src/: boosts.rs  jwt.rs  lib.rs  node_info.rs  numerology.rs  sent_boosts.rs  settings.rs  triggers.rs  webhooks.rs
lnd-rs/: Cargo.toml  build.rs
lnd-rs/src/: lib.rs  lnrpc.rs
lnd-rs/src/lnrpc/: lnrpc.rs
src/: boost.rs  cookies.rs  deserializers.rs  handler.rs  lightning.rs  lnaddress.rs  lnclient.rs  main.rs  metadata.rs  podcastindex.rs  poller.rs  router.rs  triggers.rs  utils_lnd.rs
src/lnclient/: clnclient.rs  lndclient.rs
umbrel/: 4G6CFc9vkBsi.test  Dockerfile  README.md  docker-compose.yml  env.txt  install.sh  launch.sh  multi-arch-builder.txt  testing.txt
webroot/: home.html  streams.html
webroot/extra/: apps.json  numerology.json
webroot/html/: compose.html  home.html  login.html  send.html  sendboost.html  sent.html  settings.html  streams.html
webroot/script/: balance.js  common.js  compose.js  confetti.js  helipad.js  home.js  nostr.bundle.js  send.js  sendboost.js  streams.js  utils.js
webroot/style/: default.css
webroot/template/: general-settings.hbs  numerology-edit.hbs  numerology-list.hbs  numerology-reset.hbs  trigger-edit.hbs  trigger-list.hbs  webhook-edit.hbs  webhook-list.hbs
