[package]
name = "helipad"
version = "0.1.11"
edition = "2018"
build = "build.rs"

[package.metadata.configure_me]
spec = "config_spec.toml"

[dependencies]
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "3.0.1"
route-recognizer = "0.2"
bytes = "0.5"
async-trait = "0.1"
url = "2.2.1"
rusqlite = "0.26.1"
drop-root = "0.1.1"
percent-encoding = "2.1.0"
prost = "0.6.1"
websocket = "0.24.0"
dbif = { path = 'dbif'}
lnd-rs = { path = "lnd-rs" }
voca_rs = "1.14.0"
configure_me = "0.4.0"
handlebars = "4.2.1"
chrono = "0.4.35"
reqwest = "0.11.20"
lru = "0.11.1"
rand = "0.8.5"
sha2 = "0.10.7"
data-encoding = "2.4.0"
email_address = "0.2.4"
cookie = "0.18.0"
jsonwebtoken = "9.2.0"
axum = "0.7.5"
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["cookie"] }

[build-dependencies]
configure_me_codegen = "0.4.1"
