[package]
name = "helipad"
version = "0.2.1"
edition = "2018"
build = "build.rs"

[package.metadata.configure_me]
spec = "config_spec.toml"

[dependencies]
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2.1"
drop-root = "0.1.1"
dbif = { path = 'dbif'}
lnd-rs = { path = "lnd-rs" }
configure_me = "0.4.0"
handlebars = "4.2.1"
chrono = "0.4.35"
reqwest = { version = "0.11.20", features = ["json"] }
lru = "0.11.1"
rand = "0.8.5"
sha2 = "0.10.7"
data-encoding = "2.4.0"
email_address = "0.2.4"
cookie = "0.18.0"
jsonwebtoken = "9.2.0"
axum = { version = "0.7.5", features = ["multipart", "ws"] }
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["cookie"] }
axum_typed_multipart = "0.11.0"
tempfile = "3.10.1"
tower-http = { version = "0.5.2", features = ["fs", "cors", "set-header"] }
tower = "0.5.2"
urlencoding = "2.1.3"

[build-dependencies]
configure_me_codegen = "0.4.8"
